name:                pingpong
version:             0.1.0.0
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable pingpong
  main-is: Main.hs
  build-depends:       base >=4.8 && <4.9
                     , eta-fibers-dev
  hs-source-dirs:      src
  default-language:    Haskell2010